--- a/src/app/ngohome/ngohome.component.css
+++ b/src/app/ngohome/ngohome.component.css
@@ -7,6 +7,7 @@
     background : #B7B9B9;
     text-align: center;
     font-size: 18px;
+    overflow: hidden;
 }
 
 
